--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "mysql2": "^3.9.1",
     "nodemon": "^3.0.3"
   }
 }
